--- a/Stock_Market_Prediction_using_Numerical_and_Textual_Analysis-main/Stock_Market_Prediction_using_Numerical_and_Textual_Analysis.ipynb
+++ b/Stock_Market_Prediction_using_Numerical_and_Textual_Analysis-main/Stock_Market_Prediction_using_Numerical_and_Textual_Analysis.ipynb
@@ -27,7 +27,7 @@
         "\n",
         "**GRIP @ The Sparks Foundation**\n",
         "\n",
-        "### **Author:** Sukonya Phukan\n",
+        "### **Author:** Ankit Kumar\n",
         "### Data Science & Business Analytics Intern\n",
         "**July 2021**\n",
         "\n",
